src/Magick.NET/Native/Settings/MagickSettings.cs

            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Depth_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Endian_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Endian_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Extract_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Extract_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Format_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Format_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern double MagickSettings_FontPointsize_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_FontPointsize_Set(IntPtr instance, double value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_Monochrome_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Monochrome_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Interlace_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Interlace_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_Verbose_Get(IntPtr instance);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Verbose_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetColorFuzz(IntPtr Instance, double value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetFileName(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_SetFont(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetNumberScenes(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetOption(IntPtr Instance, IntPtr key, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetPage(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetPing(IntPtr Instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetQuality(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetScenes(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetScene(IntPtr Instance, UIntPtr value);
            [DllImport(NativeLibrary.ARM64Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetSize(IntPtr Instance, IntPtr value);
        }
        #endif
        #if PLATFORM_x86 || PLATFORM_AnyCPU
        public static class X86
        {
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Create();
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Dispose(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_AntiAlias_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_AntiAlias_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_BackgroundColor_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_BackgroundColor_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_ColorSpace_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_ColorSpace_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_ColorType_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_ColorType_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Compression_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Compression_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_Debug_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Debug_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Density_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Density_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Depth_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Depth_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Endian_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Endian_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Extract_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Extract_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_Format_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Format_Set(IntPtr instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern double MagickSettings_FontPointsize_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_FontPointsize_Set(IntPtr instance, double value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_Monochrome_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Monochrome_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern UIntPtr MagickSettings_Interlace_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Interlace_Set(IntPtr instance, UIntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.Bool)]
            public static extern bool MagickSettings_Verbose_Get(IntPtr instance);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_Verbose_Set(IntPtr instance, [MarshalAs(UnmanagedType.Bool)] bool value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetColorFuzz(IntPtr Instance, double value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern void MagickSettings_SetFileName(IntPtr Instance, IntPtr value);
            [DllImport(NativeLibrary.X86Name, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr MagickSettings_SetFont(IntPtr Instance, IntPtr value);
